--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Hi, i'm Sammwy! Welcome to my personal website. Take a look at my list of open-source projects." />
     <link rel="apple-touch-icon" href="/favicon.png" />
     <!-- <link rel="manifest" href="/manifest.json" /> -->
-    <title>&lt;Kuryluk Developer&gt;</title>
+    <title>&lt;KurylukPortafolio /&gt;</title>
   </head>
   <body>
     <div id="root"></div>
