prueba view en telefono

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Hi, i'm Sammwy! Welcome to my personal website. Take a look at my list of open-source projects." />
-    <link rel="apple-touch-icon" href="/favicon.png" />
-    <!-- <link rel="manifest" href="/manifest.json" /> -->
-    <title>&lt;KurylukPortafolio /&gt;</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" href="/favicon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="theme-color" content="#000000" />
+        <meta name="description" content="Hi, i'm Simon! Welcome to my personal website. Take a look at my list of open-source projects." />
+        <link rel="apple-touch-icon" href="/favicon.png" />
+        <title>&lt;KurylukPortafolio /&gt;</title>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.jsx"></script>
+    </body>
 </html>
